--- a/src/Index.html
+++ b/src/Index.html
@@ -28,11 +28,12 @@
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur eum pariatur et, vero soluta nemo aliquam amet incidunt beatae voluptate odio. Quas maxime dolores quisquam repellat maiores delectus consectetur doloremque?
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis unde fugiat, velit praesentium illo numquam odit repellat error illum soluta. Voluptatem reiciendis molestiae esse ullam sunt error blanditiis ratione suscipit.
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. A et molestias nisi, temporibus voluptate aperiam veniam sit fugit in itaque quia. Sed expedita recusandae, ducimus reprehenderit nulla odio alias nostrum.
-              
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. A et molestias nisi, temporibus voluptate aperiam veniam sit fugit in itaque quia. Sed expedita recusandae, ducimus reprehenderit nulla odio alias nostrum.
             </p><br>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore laborum, dolores ab explicabo ipsum repellat odio architecto numquam, voluptates necessitatibus eveniet culpa quasi iste porro commodi quos. Reiciendis, ad laborum.
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur eum pariatur et, vero soluta nemo aliquam amet incidunt beatae voluptate odio. Quas maxime dolores quisquam repellat maiores delectus consectetur doloremque?
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis unde fugiat, velit praesentium illo numquam odit repellat error illum soluta. Voluptatem reiciendis molestiae esse ullam sunt error blanditiis ratione suscipit.
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. A et molestias nisi, temporibus voluptate aperiam veniam sit fugit in itaque quia. Sed expedita recusandae, ducimus reprehenderit nulla odio alias nostrum.
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. A et molestias nisi, temporibus voluptate aperiam veniam sit fugit in itaque quia. Sed expedita recusandae, ducimus reprehenderit nulla odio alias nostrum.
             
             </p><br>
@@ -42,6 +43,9 @@
               <p id="h">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis non nulla assumenda facilis perspiciatis incidunt hic rerum cumque sed, facere id sint accusamus aperiam, laborum dolor ullam, nihil totam recusandae.</p>
             </div>
     </div>
+      </div>
+      <div class="footer">
+        <span>Copyright &copy Site name, 20XX</span>
       </div>
     </div>
   </body>
